首页样式调整 登录方法

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.93",
-	"appid": "wx9699e4f2af1dbc1f",
+	"appid": "wx1c959afc732051ad",
 	"projectname": "changxiang",
 	"condition": {
 		"search": {
