--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.93",
-	"appid": "wx1c959afc732051ad",
-	"projectname": "changxiang",
+	"appid": "touristappid",
+	"projectname": "changxianglocal",
 	"condition": {
 		"search": {
 			"current": -1,
