--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     "pages/transfer/transfer",
     "pages/transfer/pickService/pickService",
     "pages/myCenter/complain/complain",
-    "pages/myCenter/complain/myComplain/myComplain"
+    "pages/myCenter/complain/myComplain/myComplain",
+    "pages/myCenter/complain/complainType/complainType"
   ],
   "window":{
     "backgroundTextStyle":"dark",
